stylesheets/minecraftquiz.scss
@import "mixins";
@use "sass:list";

* {
    /*
    "Premature Optimization Is the Root of All Evil"
    - some site

    ;)
    */
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: inherit;
}

$colors: #f4303c, #0d65d3, #df9a00, #1f780a;

body {
    @include no-select;
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100vw;
    align-items: stretch;
    background-color: #f2f2f2;

    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

header {
    @include super-centered;
    background-color: white;
    height: 8vh;
    min-height: 5rem;
    font-size: 4vmin;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
}

.image-container {
    @include super-centered(false);
    height: 62vh;

    .block-image {
        /* ↓ is so that the tiny 16x16 images don't get interpolated and blurred */
        image-rendering: crisp-edges;
        text-align: center;
        height: 15vmin;
        width: 15vmin;

        filter: drop-shadow(0px 0px 5px #222);
    }
}

.answers-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 10px;
    padding: 40px;
}

.answer-option {
    border: none;
    text-align: left;
    padding: 0.9em;
    padding-left: 1.5em;
    box-shadow: rgba(0, 0, 0, 0.15) 0px -4px 0px 0px inset;
    border-radius: 5px;

    color: white;
    font-size: 1.5em;
    font-weight: bold;

    transition: 0.2s background-color;

    &::first-letter {
        text-transform: capitalize;
    }
}

/* this took like 50 min to write ;-; */
@for $i from 1 to 5 {
    .answers-container > .answer-option:nth-child(#{$i}) {
        $button-color: nth($colors, $i);
        background-color: $button-color;

        &:hover,
        &:active {
            background-color: darken($button-color, $amount: 10%);
        }
    }
}

